Fixed Z-Index for warnings

--- a/css/Photobooth.css
+++ b/css/Photobooth.css
@@ -42,6 +42,7 @@
 	margin-left: -30%;
 	display: none;
 	padding: 5px;
+	z-index: 10;
 	text-align: center;
 }
 
